Fixed nav bar alignment

--- a/sinatra-skeleton/public/stylesheets/application.css
+++ b/sinatra-skeleton/public/stylesheets/application.css
@@ -43,3 +43,7 @@
 .errors {
 	text-align: center;
 }
+
+.navbar {
+	margin-bottom: 0 !important;
+}
