--- a/sinatra-skeleton/public/stylesheets/bootstrap-small.css
+++ b/sinatra-skeleton/public/stylesheets/bootstrap-small.css
@@ -28,7 +28,6 @@
 }
 
 .navbar{
-    margin-bottom: 17px;
     min-height: 30px;
 }
 .navbar-fixed-bottom{
