--- a/sinatra-skeleton/public/stylesheets/css-intro.css
+++ b/sinatra-skeleton/public/stylesheets/css-intro.css
@@ -82,9 +82,6 @@ a:hover {
 	background: rgba(255, 255, 255, 0.95);
 	box-shadow: 0px 0.5px 2px #cecece;
 }
-.navbar-default .navbar-brand {
-    padding: 7px;
-}
 .navbar-default .navbar-nav > li > a {
     color: #777;
 	font-weight: 500;
